--- a/provaPWEB/Prova_Vitor_Manfre/WebContent/Vitor_0030481511041_Semaforo.html
+++ b/provaPWEB/Prova_Vitor_Manfre/WebContent/Vitor_0030481511041_Semaforo.html
@@ -6,22 +6,22 @@
 	</head>
 	<body>
 		<h1>Semaforo</h1>
-		
-		<img id="myImage" src="imagems/verde.jpg"">
+
+		<img id="myImage" src="imagems/verde.jpg">
 		<button onclick="mudaImagem()">Troca de Cor</button>
-		
+
 		<script type="text/javascript">
 			function mudaImagem() {
-				if (document.getElementById('myImage').src.indexOf("imagems/verde.jpg") != -1) {
+				if (document.getElementById('myImage').src.indexOf("verde.jpg") != -1) {
 					document.getElementById('myImage').src='imagems/amarelo.jpg'
 				}
-				else if (document.getElementById('myImage').src.indexOf("imagems/amarelo.jpg") != -1) {
+				else if (document.getElementById('myImage').src.indexOf("amarelo.jpg") != -1) {
 					document.getElementById('myImage').src='imagems/vermelho.jpg'
 				}
 				else {
-					document.getElementById('myImage').src='imagems/verde.jpg'	
+					document.getElementById('myImage').src='imagems/verde.jpg'
 				}
 			}
-		</script>	
+		</script>
 	</body>
 </html>
